--- a/AlphabetSoupCharity-Optimization.ipynb
+++ b/AlphabetSoupCharity-Optimization.ipynb
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "# Drop the non-beneficial ID columns, 'EIN' and 'NAME'.\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df = application_df.drop(['EIN','NAME'], axis = 1)"
    ]
   },
   {
@@ -206,7 +206,7 @@
    ],
    "source": [
     "# Determine the number of unique values in each column.\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df.nunique()"
    ]
   },
   {
@@ -244,7 +244,7 @@
    ],
    "source": [
     "# Look at APPLICATION_TYPE value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df[\"APPLICATION_TYPE\"].value_counts()"
    ]
   },
   {
@@ -275,7 +275,7 @@
    "source": [
     "# Choose a cutoff value and create a list of application types to be replaced\n",
     "# use the variable name `application_types_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "application_types_to_replace = application_df['APPLICATION_TYPE'].value_counts()[application_df['APPLICATION_TYPE'].value_counts() < 200].index.tolist()\n",
     "\n",
     "# Replace in dataframe\n",
     "for app in application_types_to_replace:\n",
@@ -314,7 +314,7 @@
    ],
    "source": [
     "# Look at CLASSIFICATION value counts for binning\n",
-    "#  YOUR CODE GOES HERE"
+    "application_df[\"CLASSIFICATION\"].value_counts()"
    ]
   },
   {
@@ -380,7 +380,8 @@
    ],
    "source": [
     "# You may find it helpful to look at CLASSIFICATION value counts >1\n",
-    "#  YOUR CODE GOES HERE"
+    "\n",
+    "application_df[\"CLASSIFICATION\"].value_counts()[application_df['CLASSIFICATION'].value_counts()>1]\n"
    ]
   },
   {
@@ -408,7 +409,7 @@
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
-    "#  YOUR CODE GOES HERE\n",
+    "classifications_to_replace application_df[\"CLASSIFICATION\"].value_counts()[application_df[\"CLASSIFICATION\"].value_counts() < 1500].index.tolist()\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
@@ -425,7 +426,8 @@
    "outputs": [],
    "source": [
     "# Convert categorical data to numeric with `pd.get_dummies`\n",
-    "#  YOUR CODE GOES HERE"
+    "dummies = pd.get_dummies(application_df[\"ORGANIZATION\", \"USE_CASE\", \"APPLICATION_TYPE\", \"AFFILIATION\", \"CLASSIFICATION\", \"INCOME_AMT\", \"SPECIAL_CONSIDERATIONS\", \"STATUS\", \"ASK_AMT\"])\n",
+    "dummies.info()"
    ]
   },
   {
@@ -435,10 +437,11 @@
    "outputs": [],
    "source": [
     "# Split our preprocessed data into our features and target arrays\n",
-    "#  YOUR CODE GOES HERE\n",
+    "x = dummies.copy()\n",
+    "y = application_df[\"IS_SUCCESSFUL\"]\n",
     "\n",
     "# Split the preprocessed data into a training and testing dataset\n",
-    "#  YOUR CODE GOES HERE"
+    "X_train, X_test, y_train, y_test = train_test_split(x, y, random_state=1)"
    ]
   },
   {
@@ -496,18 +499,20 @@
    ],
    "source": [
     "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "#  YOUR CODE GOES HERE\n",
+    "number_input_features = len(X_train_scaled[0])\n",
+    "hidden_nodes_layer_1 =  20\n",
+    "hidden_nodes_layer_2 = 10\n",
     "\n",
     "nn = tf.keras.models.Sequential()\n",
     "\n",
     "# First hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units = hidden_nodes_layer_1, input_dim = number_input_features, activation = \"relu\"))\n",
     "\n",
     "# Second hidden layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=hidden_nodes_layer_2, activation=\"relu\"))\n",
     "\n",
     "# Output layer\n",
-    "#  YOUR CODE GOES HERE\n",
+    "nn.add(tf.keras.layers.Dense(units=1, activation=\"sigmoid\"))\n",
     "\n",
     "# Check the structure of the model\n",
     "nn.summary()"
@@ -530,7 +535,7 @@
    ],
    "source": [
     "# Compile the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.compile(loss = \"binary_crossentropy\", optimizer = \"adam\", metrics = [\"accuracy\"])\n"
    ]
   },
   {
@@ -747,7 +752,7 @@
    ],
    "source": [
     "# Train the model\n",
-    "#  YOUR CODE GOES HERE"
+    "nn_fit_model = nn.fit(X_train_scaled, y_train, epochs = 50)"
    ]
   },
   {
@@ -777,13 +782,13 @@
    "outputs": [],
    "source": [
     "# Export our model to HDF5 file\n",
-    "#  YOUR CODE GOES HERE"
+    "nn.save(\"AlphabetSoupCharity.h5\", overwrite = True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -797,7 +802,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.-1.-1"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
